[tool.poetry]
name = "pyvideo_scrape_mpm"
version = "0.1.0"
description = ""
authors = ["AndreyeuIvan <andreeviv@icloud.com>"]

[tool.poetry.dependencies]
python = "^3.6"
python-slugify = "^4.0.1"
youtube-dl = "^2020.6.16"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
